fixed text overflow in about us

--- a/index.css
+++ b/index.css
@@ -250,10 +250,6 @@
         padding: 0px 20px;
     }
 
-    .aboutCont {
-        height: 60rem;
-    }
-
     .aboutCont div div {
         margin-bottom: 20px;
     }
